<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardsBattleGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="note1">login first</string>
	<string name="login">login</string>
	<string name="register">register</string>
	<string name="username_input">username</string>
	<string name="password_input">passname</string>
	<string name="name">角色名:</string>
	<string name="level">等级:</string>
	<string name="state1">能量:</string>
	<string name="state2">体力:</string>
	<string name="rank">排名:</string>
</resources>
