<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cardbattlegame.activity.LoginActivity" 
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/background_login_div"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/note1" />

        <EditText
            android:id="@+id/accountEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/qq_edit_login"
            android:ems="10"
            android:textSize="16sp" 
            android:hint="@string/username_input"
            android:singleLine="true" />
             <requestFocus />

        <EditText
            android:id="@+id/pwdEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/qq_edit_login"
            android:ems="10"
            android:textSize="16sp"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>
        <!--  <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="显示密码" />
        -->
		<LinearLayout 
		    android:id="@+id/btnPanel"
	        android:layout_width="400dp"
    	    android:layout_height="50dp"
        	android:background="@android:color/transparent"
        	android:orientation="horizontal" >
		    <Button
            	android:id="@+id/loginBtn"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="start"
            	android:layout_marginTop="18dp"
            	android:layout_marginLeft="60dp"
            	style="?android:attr/borderlessButtonStyle"
            	android:background="@drawable/background_button_div"
            	android:text="@string/login" />
        	<Button
            	android:id="@+id/RegisterBtn"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="right"
            	android:layout_marginTop="18dp"
            	android:layout_marginLeft="80dp"
            	style="?android:attr/borderlessButtonStyle"
            	android:background="@drawable/background_button_div"
            	android:text="@string/register" />
		</LinearLayout>
        
        
    </LinearLayout>

</RelativeLayout>