<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cardbattlegame.activity.MenuActivity" >

    <LinearLayout
        android:id="@+id/menuPanel"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_login_div"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:ems="10" />

        <TextView
            android:id="@+id/level"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/level"
            android:ems="10" />

        <TextView
            android:id="@+id/rank"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/rank"
            android:ems="10" />
    </LinearLayout>

    <Button
        android:id="@+id/guide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/battle"
        android:background="@drawable/guide" />

    <Button
        android:id="@+id/battle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/menuPanel"
        android:layout_marginLeft="76dp"
        android:layout_toRightOf="@+id/menuPanel"
        android:background="@drawable/button1" />

</RelativeLayout>